--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "node app backend for happymap",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "node server.js",  
+    "start" : "node app.js",
+    "dist": "webpack --progress --colors -p"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,44 @@
   "bugs": {
     "url": "https://github.com/zimiw/happymap-back/issues"
   },
-  "homepage": "https://github.com/zimiw/happymap-back#readme"
+  "homepage": "https://github.com/zimiw/happymap-back#readme",
+  "dependencies": {
+    "express": "4.0.0",
+    "flex.css": "1.0.1",
+    "get-next-page": "1.0.0",
+    "github-markdown-css": "^2.4.0",
+    "normalize.css": "^4.1.1",
+    "obj-merged": "^1.0.5",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "postcss-loader": "^1.2.1",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0" :"^6.16.0",
+    "classnames": "^2.2.5",
+    "body-parser": "^1.15.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.22.0",
+    "jsx-loader": "^0.13.2",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "node-sass" : "^3.4.2",
+    "sass-loader": "^3.2.0",
+    "curry": "^1.2.0",
+    "blueimp-md5" : "^2.6.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "1.14.1"
+  }
 }
